<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/sample_rate_container"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:orientation="horizontal" >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sample_rate_label" />

    <EditText
        android:id="@+id/sampling_rate"
        android:layout_width="0dp"
        android:ems="5"        
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:inputType="numberDecimal" 
        android:gravity="right">

        <requestFocus />
    </EditText>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sample_rate_separator" />

    <Spinner
        android:id="@+id/sampling_units"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:entries="@array/sample_rate_units"
        android:prompt="@string/sample_rate_prompt" >
    </Spinner>

</LinearLayout>